<resources>
    <string name="app_name">PIN Mnemonic</string>
    <string name="app_name_long">Privacy Friendly PIN Mnemonic</string>

    <!-- ###DRAWER###-->
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Main</string>
    <string name="action_game">Game</string>

    <!-- Menu Items-->
    <string name="action_numpad">Number Pad</string>
    <string name="action_enter_pin">Enter PIN</string>
    <string name="action_practice">Practice</string>
    <string name="action_navigation">Navigation</string>
    <string name="action_pin_mnemonics">PIN Mnemonics</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Mnemonic Items and Headings from ShowHintFragment-->
    <string name="display_no_word">No word possible</string>
    <string name="display_no_math">No formula found</string>
    <string name="display_no_date">No date found</string>
    <string name="display_date_year_1900s">It is a valid year in the 1900s</string>
    <string name="display_date_year_2000s">It is a valid year in this century</string>
    <string name="display_date_year_any">It is a valid year from the past</string>
    <string name="display_math_stepping">It is a stepping PIN: </string>
    <string name="display_entered_pin">PIN: </string>
    <string name="shape_heading">Shape:</string>
    <string name="word_heading">Word:</string>
    <string name="date_heading">Date:</string>
    <string name="math_heading">Math:</string>
    <string name="story_heading">Story:</string>

    <!-- EnterPINFragment-->
    <string name="enter_pin">Enter your 4-digit-PIN: </string>
    <string name="show_mnemonics_button">Show Mnemonics</string>
    <string name="four_digits">Please enter 4 digits.</string>

    <!-- NumPad-->
    <string name="numpad_delete">DEL</string>
    <string name="numpad_reset">RESET</string>
    <string name="hint_numpad">If you use the word strategy be aware that many PIN entering devices do not display letters on the number pad. The number pad above can be used as a crib.</string>

    <!-- PracticeFragment-->
    <string name="your_pin_heading">Your PIN:</string>
    <string name="practise_button">Practice entering your PIN</string>
    <string name="practised_pin_heading">Practiced PIN:</string>
    <string name="toast_success">You\'ve entered the right PIN. Please repeat a few times.</string>
    <string name="toast_fail">You\'ve entered the wrong PIN. Please re-read the mnemonics and try again.</string>

    <!-- HelpFragment-->
    <string name="help_overview_heading">Overview</string>
    <string name="help_tip_one">Privacy Friendly PIN Mnemonic helps you memorizing your 4-digit-PIN by presenting up to 5 strategies.</string>
    <string name="help_tip_two">Don\'t forget to practice entering your PIN multiple times for internalization.</string>
    <string name="help_tip_three">If you\'re using the word strategy be aware that most of PIN-Numpads don\'t have letters on it. You can use your phone as a crib.</string>

    <string name="help_shape_heading">Shape</string>
    <string name="help_one_highlighted">Digit is contained once</string>
    <string name="help_two_highlighted">Digit is contained twice</string>
    <string name="help_three_highlighted">Digit is contained three times</string>
    <string name="help_four_highlighted">Digit is contained four times</string>
    <string name="help_story_heading">Stories</string>
    <string name="help_story_description">Use the displayed symbols to imagine a little story or sentence to remember the PIN.</string>
    <string name="help_story_example">Example story for the PIN 4587: I held a clover in my hand, then I went to play billiards at 7p.m.</string>
    <string name="help_story_additional">The symbols are just hints, you can make up any story that helps you remembering the PIN.</string>
    <string name="help_privacy_heading">Privacy Info</string>
    <string name="help_pin_storage_heading">PIN Storage</string>
    <string name="help_pin_storage_description">Your PIN is neither stored nor transmitted</string>
    <string name="help_permissions_heading">Permissions</string>
    <string name="help_permissions_description">Privacy Friendly PIN Mnemonics does not use any permissions</string>

    <!-- AboutFragment-->
    <string name="version_number">Version 1.2</string>
    <string name="about_author">Author: Karola Marky</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="privacy_friendly">This application belongs to the Privacy Friendly Apps.</string>
    <string name="more_info">More information can be found on:</string>
    <string name="url"><a href="https://www.secuso.informatik.tu-darmstadt.de/en/research/results/privacy-friendly-apps">https://www.secuso.org</a></string>

    <!-- Tutorials global-->
    <string name="confirm_button">Got it</string>
    <string name="help_button">View Help</string>

    <!-- Tutorials specific-->
    <string name="tutorial_practice_title">Practice your PIN</string>
    <string name="tutorial_practice_description">Enter your PIN repeatedly keeping the chosen mnemonic in mind.</string>
    <string name="tutorial_mnemonics_title">View Mnemonics</string>
    <string name="tutorial_mnemonics_description">This pages shows techniques to support memorizing the PIN. Please practice entering your PIN after choosing a mnemonic.</string>

    <!-- Security reset-->
    <string name="security_reset_title">Security reset</string>
    <string name="security_reset_description">The app was minimized for more than 5 minutes. The interface has been reset for security reasons to protect your PIN.</string>
    <string name="security_reset_okay">Okay</string>

    <!-- ###MAIN### -->
    <string name="main_button_text">Full Width Button</string>
    <string name="main_button_disabled_text">Inactive Button</string>
    <string name="main_button_1">1</string>
    <string name="main_button_2">2</string>
    <string name="main_button_3">3</string>
    <string name="main_button_4">4</string>
    <string name="main_button_5">5</string>
    <string name="main_text_fullwithbutton_desc">A button that uses the full width of the screen looks like this:</string>
    <string name="main_text_disabledbutton_desc">A disabled button looks like this (any size):</string>
    <string name="main_text_title">This is an example app to demonstrate the design of a Privacy Friendly App. Further explanations can be found in the Privacy Friendly App Guide.</string>
    <string name="main_text_normalbutton_desc">There are multiple ways to display basic buttons. Button 1 is the basic button. If you wish to separate a button visually, use button 2. The buttons 3&#8211;5 are examples for highlighted buttons. Depending on the app other colors are possible.</string>
    <string name="main_button_welcomedialog_text">Use the button in the lower left corner to call the Welcome Dialog.</string>

    <!-- ###GAME###-->
    <string name="title_activity_game">Game</string>
    <string name="game_button_start">New Game</string>
    <string name="game_button_continue">Continue Game</string>
    <string name="game_desc">This is the default main menu for game apps. The viewpager above should be used to switch between game modes.</string>

    <!--###HELP###-->
    <string name="help">Help</string>
    <string name="help_general_heading">Overview</string>
    <string name="help_feature_heading">Features</string>

    <string name="help_whatis">What is Privacy Friendly App Example?</string>
    <string name="help_whatis_answer">Privacy Friendly App Example is an app that demonstrates the design of a Privacy Friendly App.</string>
    <string name="help_feature_one">Feature 1</string>
    <string name="help_feature_one_answer">Description of first feature.</string>
    <string name="help_privacy">What makes the app privacy-friendly?</string>
    <string name="help_privacy_answer">Privacy Friendly App Example does not require any permission. It further does not include any tracking mechanisms or advertisement.</string>
    <string name="help_permission">Which permissions requires the app?</string>
    <string name="help_permission_answer">Privacy Friendly App Example does not require any permission.</string>

    <!--###ABOUT###-->
    <string name="about">About</string>
    <string name="about_author_names" translatable="false">Karola Marky</string>
    <string name="about_author_contributors">and contributors.</string>
    <string name="github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-app-example">Github-Repo</a></string>

    <!-- ###SETTINGS### -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_example_switch">Example Switch</string>
    <string name="pref_example_switch_summary">Example Switch Summary</string>
    <string name="pref_example_summary">Example Summary</string>

    <!-- ### WELCOME DIALOG ### -->
    <string name="welcome_text">This App serves as a guideline to see the basic design of Privacy Friendly Apps. The sourcecode is available at GitHub. For further explanations have a look at the Privacy Friendly App Guide.\n\nThe welcome screen should introduce the app and the key elements of the start page.</string>
    <string name="welcome">Welcome</string>
    <string name="okay">Okay</string>
    <string name="viewhelp">View Help</string>
    <string name="main_button_welcomedialog">Show Welcome</string>
</resources>