<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Overview">
        <Preference
            android:summary="Privacy Friendly PIN Mnemonic helps you memorizing your PIN by presenting up to 5 strategies." />
        <Preference
            android:summary="Don't forget to practice entering your PIN multiple times for internalization." />
        <Preference
            android:summary="PIN-Numpads often do not have letters on it. Use your phone as a crib." />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/help_shape_heading">
        <Preference
            android:icon="@mipmap/help_one"
            android:summary="@string/help_one_highlighted" />
        <Preference
            android:icon="@mipmap/help_two"
            android:summary="@string/help_two_highlighted" />
        <Preference
            android:icon="@mipmap/help_three"
            android:summary="@string/help_three_highlighted" />
        <Preference
            android:icon="@mipmap/help_four"
            android:summary="@string/help_four_highlighted" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/help_story_heading">
        <Preference
            android:icon="@mipmap/story_two"
            android:summary="@string/help_story_description" />
        <Preference
            android:icon="@mipmap/help_story"
            android:summary="@string/help_story_example" />
        <Preference
            android:summary="@string/help_story_additional"
            />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/help_privacy_heading">
        <Preference
            android:summary="@string/help_pin_storage_description"
            android:title="@string/help_pin_storage_heading" />
        <Preference
            android:summary="@string/help_permissions_description"
            android:title="@string/help_permissions_heading" />
    </PreferenceCategory>
</PreferenceScreen>