<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/show_hint_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/show_current_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/pin_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="10dp"
            android:text="@string/display_entered_pin"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/current_pin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/pin_message"
            android:layout_toRightOf="@+id/pin_message"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/shapeHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/practiseButton"
        android:layout_alignStart="@+id/practiseButton"
        android:layout_below="@+id/show_current_pin"
        android:text="@string/shape_heading"
        android:textSize="15sp" />

    <GridLayout
        android:id="@+id/numbers_show_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/shapeHeading"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:columnCount="3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_one_hint"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="2dp"
            android:background="@drawable/hints_numpad"
            android:text="1&#10;"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_two_hint"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="2dp"
            android:background="@drawable/hints_numpad"
            android:text="2&#10;ABC"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_three_hint"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="2dp"
            android:background="@drawable/hints_numpad"
            android:text="3&#10;DEF"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_four_hint"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="2dp"
            android:background="@drawable/hints_numpad"
            android:text="4&#10;GHI"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_five_hint"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="2dp"
            android:background="@drawable/hints_numpad"
            android:text="5&#10;JKL"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_six_hint"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="2dp"
            android:background="@drawable/hints_numpad"
            android:text="6&#10;MNO"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_seven_hint"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="2dp"
            android:background="@drawable/hints_numpad"
            android:text="7&#10;PQRS"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_eight_hint"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="2dp"
            android:background="@drawable/hints_numpad"
            android:text="8&#10;TUV"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_nine_hint"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="2dp"
            android:background="@drawable/hints_numpad"
            android:text="9&#10;WXYZ"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_zero_space_left"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="2dp"
            android:background="@drawable/invisible_button"
            android:text="0&#10;"
            android:textColor="@color/transparent" />

        <Button
            android:id="@+id/button_zero_hint"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="2dp"
            android:background="@drawable/hints_numpad"
            android:text="0&#10;"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_zero_space_right"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="2dp"
            android:background="@drawable/invisible_button"
            android:text="0&#10;"
            android:textColor="@color/transparent" />
    </GridLayout>

    <RelativeLayout
        android:id="@+id/numpadFrame"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/wordHeading"
        android:layout_alignEnd="@+id/numbers_show_hint"
        android:layout_alignLeft="@+id/numbers_show_hint"
        android:layout_alignRight="@+id/numbers_show_hint"
        android:layout_alignStart="@+id/numbers_show_hint"
        android:layout_below="@+id/show_current_pin"></RelativeLayout>

    <TextView
        android:id="@+id/wordHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/shapeHeading"
        android:layout_alignStart="@+id/shapeHeading"
        android:layout_below="@+id/numbers_show_hint"
        android:layout_marginTop="20dp"
        android:text="@string/word_heading"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/dateHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/shapeHeading"
        android:layout_alignStart="@+id/shapeHeading"
        android:layout_below="@+id/wordHeading"
        android:layout_marginTop="10dp"
        android:text="@string/date_heading"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/mathHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/shapeHeading"
        android:layout_alignStart="@+id/shapeHeading"
        android:layout_below="@+id/dateHeading"
        android:layout_marginTop="10dp"
        android:text="@string/math_heading"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/storyHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/shapeHeading"
        android:layout_alignStart="@+id/shapeHeading"
        android:layout_below="@+id/mathHeading"
        android:layout_marginTop="20dp"
        android:text="@string/story_heading"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/numbers_show_hint"
        android:layout_alignStart="@+id/numbers_show_hint"
        android:layout_alignTop="@+id/wordHeading"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/numbers_show_hint"
        android:layout_alignStart="@+id/numbers_show_hint"
        android:layout_below="@+id/wordHeading"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/math"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/numbers_show_hint"
        android:layout_alignStart="@+id/numbers_show_hint"
        android:layout_below="@+id/dateHeading"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <GridLayout
        android:id="@+id/symbolRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/practiseButton"
        android:layout_alignLeft="@+id/math"
        android:layout_alignStart="@+id/math"
        android:columnCount="4">

        <ImageView android:id="@+id/symbolImageView1" />

        <ImageView
            android:id="@+id/symbolImageView2"
            android:layout_marginLeft="10dp" />

        <ImageView
            android:id="@+id/symbolImageView3"
            android:layout_marginLeft="10dp" />

        <ImageView
            android:id="@+id/symbolImageView4"
            android:layout_marginLeft="10dp" />

    </GridLayout>

    <Button
        android:id="@+id/practiseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/storyHeading"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="39dp"
        android:background="@drawable/practise_button"
        android:text="@string/practise_button"
        android:textColor="@color/white" />


</RelativeLayout>
